linux/iptables
# See the "iptables" manual page for more information.

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# Allow ping and traceroute
-A INPUT -p icmp --icmp-type echo-request -m limit --limit 300/min -j ACCEPT
-A INPUT -p icmp --icmp-type echo-reply -m limit --limit 300/min -j ACCEPT -m state --state ESTABLISHED,RELATED

# Block all other ICMP traffic
-A INPUT -p icmp -j DROP

# Restrict SSH access
-A INPUT -s 192.168.7.90 -d 192.168.7.100 -p tcp --dport 22 -j ACCEPT

# SMTP
# Rate limit by hitcount/seconds
-A INPUT -d 192.168.7.100 -p tcp --dport 25 -m state --state NEW -m recent --set
-A INPUT -d 192.168.7.100 -p tcp --dport 25 -m state --state NEW -m recent --update --seconds 300 --hitcount 10 -j DROP
# Limit concurrent sessions per source IP to 3
-A INPUT -d 192.168.7.100 -p tcp --syn --dport 25 -m connlimit --connlimit-above 3 -j REJECT --reject-with tcp-reset
-A INPUT -d 192.168.7.100 -p tcp --dport 25 -j ACCEPT

# DNS
-A INPUT -d 192.168.7.100 -p udp --dport 53 -j ACCEPT

# Web
-A INPUT -d 192.168.7.100 -p tcp --dport 80 -j ACCEPT
-A INPUT -d 192.168.7.100 -p tcp --dport 443 -j ACCEPT

# Allow all traffic on the local loopback interface
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# Allow traffic originating from inside the host out
-A OUTPUT -o eth0 -p icmp -j ACCEPT
-A OUTPUT -o eth0 -p tcp -j ACCEPT
-A OUTPUT -o eth0 -p udp -j ACCEPT
-A OUTPUT -o eth0:1 -p icmp -j ACCEPT
-A OUTPUT -o eth0:1 -p tcp -j ACCEPT
-A OUTPUT -o eth0:1 -p udp -j ACCEPT

# Allow connections back in if the traffic originated from this host
-A INPUT -i eth0 -p tcp -j ACCEPT -m state --state ESTABLISHED,RELATED
-A INPUT -i eth0 -p udp -j ACCEPT -m state --state ESTABLISHED,RELATED
-A INPUT -i eth0:1 -p tcp -j ACCEPT -m state --state ESTABLISHED,RELATED
-A INPUT -i eth0:1 -p udp -j ACCEPT -m state --state ESTABLISHED,RELATED

# Log all dropped traffic
-N LOGGING
-A INPUT -j LOGGING
-A OUTPUT -j LOGGING
-A FORWARD -j LOGGING
-A LOGGING -m limit --limit 2/min -j LOG --log-prefix "Dropped (IPv4): " --log-level 4
-A LOGGING -j DROP

# Drop everything else
-A INPUT -j DROP
-A OUTPUT -j DROP
-A FORWARD -j DROP

COMMIT
